# basalmodern-python

./: LICENSE  README.md  pyproject.toml
src/tests/: test_console.py
