[tool.poetry]
name = "basalmodern-python"
version = "0.1.0"
description = "The basalmodern Python Project"
license = "MIT"
authors = ["ilkka <ilkka.kosunen@gmail.com>"]
homepage = "https://github.com/BasalGanglia/basalmodern-python"
repository = "https://github.com/BasalGanglia/basalmodern-python"
readme = "README.md"
keywords = ["basalmodern"]
packages = [{include = "basalmodern_python"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
