[tool.poetry]
name = "basalmodern-python"
version = "0.1.0"
description = "The basalmodern Python Project"
license = "MIT"
authors = ["ilkka <ilkka.kosunen@gmail.com>"]
homepage = "https://github.com/BasalGanglia/basalmodern-python"
repository = "https://github.com/BasalGanglia/basalmodern-python"
readme = "README.md"
keywords = ["basalmodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.scripts]
basalmodern-python = "basalmodern_python.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.coverage.paths]
source = ["src", "*/site-packages"]